--- a/Romanian/main/PrintSpooler.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PrintSpooler.apk/res/values-ro/strings.xml
@@ -1,15 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="add_print_service_label">Adăugați un serviciu</string>
     <string name="all_printers">Toate imprimantele...</string>
     <string name="all_printers_label">Toate imprimantele</string>
-    <string name="app_label">Derulator print.</string>
+    <string name="all_services_title">Toate serviciile</string>
+    <string name="app_label">Derulator printare</string>
     <string name="blocked_notification_title_template">Printare blocată: %1$s</string>
     <string name="cancel">Anulați</string>
     <string name="cancelling_notification_title_template">Se anulează %1$s</string>
-    <string name="choose_print_service">Alegeți serviciul de printare</string>
+    <string name="cannot_add_printer">Nu s-au putut adăuga imprimante</string>
     <string name="collapse_handle">Restrângeți mânerul</string>
+    <string name="could_not_create_file">Nu s-a putut crea fișierul</string>
     <string name="current_page_template">%1$d /%2$d</string>
+    <string name="destination_default_text">Selectați o imprimantă</string>
+    <string name="disabled_services_title">Servicii dezactivate</string>
+    <string name="enable_print_service">Selectați pentru a activa</string>
+    <string name="enabled_services_title">Servicii active</string>
     <string name="expand_handle">Extindeți mânerul</string>
     <string name="failed_notification_title_template">Eroare de printare: %1$s</string>
     <string name="generating_print_job">Se generează o sarcină de printare</string>
@@ -18,6 +24,7 @@
     <string name="label_copies">Copii</string>
     <string name="label_copies_summary">Copii:</string>
     <string name="label_destination">Destinație</string>
+    <string name="label_duplex">Duplex</string>
     <string name="label_orientation">Orientare</string>
     <string name="label_pages">Pagini (%1$s)</string>
     <string name="label_paper_size">Formatul hârtiei</string>
@@ -30,17 +37,15 @@
     <string name="no_connection_to_printer">Nu există conexiune la o imprimantă</string>
     <string name="page_description_template">Pagina %1$d din %2$d</string>
     <string name="pages_range_example">de ex. 1-5, 8, 11-13</string>
-    <string name="permdesc_accessAllPrintJobs">Permite deținătorului să acceseze sarcinile de tipărire create de către alte aplicații. Nu ar trebui să fie necesară pentru aplicațiile obișnuite.</string>
-    <string name="permdesc_startPrintServiceConfigActivity">Permite deținătorului să pornească actvitățile de configurare a unui serviciu de tipărire. Nu ar trebui să fie necesară pentru aplicațiile obișnuite.</string>
-    <string name="permlab_accessAllPrintJobs">acceseze toate sarcinili de tipărire</string>
-    <string name="permlab_startPrintServiceConfigActivity">pornească actvitățile de configurare a unui serviciu de tipărire</string>
     <string name="print_add_printer">Adăugați o imprimantă</string>
     <string name="print_button">Printați</string>
+    <string name="print_cannot_load_page">"Nu se poate afișa previzualizarea"</string>
     <string name="print_dialog">Caseta de dialog de printare</string>
     <string name="print_error_default_message">"Ne pare rău, nu a mers. Încercați din nou."</string>
     <string name="print_error_printer_unavailable">"Această imprimantă nu este disponibilă acum."</string>
     <string name="print_error_retry">Reîncercați</string>
     <string name="print_forget_printer">Omiteți imprimanta</string>
+    <string name="print_no_print_services">Niciun serviciu de printare activ</string>
     <string name="print_no_printers">Nu au fost găsite imprimante</string>
     <string name="print_options_collapsed">Opțiunile de tipărire restrânse</string>
     <string name="print_options_expanded">Opțiunile de tipărire extinse</string>
@@ -50,16 +55,23 @@
     <string name="print_search_box_shown_utterance">Caseta de căutare este afișată</string>
     <string name="print_searching_for_printers">Se caută imprimante</string>
     <string name="print_select_printer">Selectați imprimanta</string>
+    <string name="print_service_security_warning_summary">Documentul dumneavoastră poate trece prin unul sau mai multe servere până ajunge la imprimantă.</string>
+    <string name="print_service_security_warning_title">Utilizați %1$s?</string>
+    <string name="print_services_disabled_toast">Unele servicii de printare sunt dezactivate</string>
     <string name="print_write_error_message">"Nu s-a putut modifica fișierul"</string>
-    <string name="printer_unavailable">%1$s - indisponibil</string>
+    <string name="printer_extended_description_template">%1$s - %2$s</string>
+    <string name="printer_info_desc">Mai multe informații despre această imprimantă</string>
     <string name="printing_app_crashed">Aplicația de printare s-a blocat</string>
     <string name="printing_notification_title_template">Se printează %1$s</string>
     <string name="reason_unknown">necunoscut</string>
+    <string name="recommended_services_title">Servicii recomandate</string>
     <string name="restart">Reporniți</string>
     <string name="save_as_pdf">Salvați ca PDF</string>
     <string name="savetopdf_button">Salvați ca PDF</string>
     <string name="search">Căutați</string>
+    <string name="select_to_add_printers">Selectați pentru a adăuga o imprimantă</string>
     <string name="summary_template">Sumar:%1$s copii, dimensiunea hârtiei %2$s</string>
     <string name="template_all_pages">Toate %1$s</string>
     <string name="template_page_range">Intervalul %1$s</string>
+    <string name="uri_package_details">market://details?id=%1$s</string>
 </resources>
