--- a/Romanian/main/Updater.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Updater.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="about_device">Despre telefon</string>
     <string name="active_xiaomi_account">Activaţi</string>
@@ -44,7 +44,7 @@
     <string name="check_local_package_wipe_msg">"Sunteți pe cale să reveniți la versiunea MIUI %s. Datele personale vor fi șterse. Asigurați-vă că ați făcut copii de rezervă pentru elementele importante înainte de a porni procesul."</string>
     <string name="check_local_package_wipe_title">Ștergeți datele</string>
     <string name="check_new_version">Verificaţi</string>
-    <string name="check_update_policy">Setări actualizări</string>
+    <string name="check_update_policy">Setări</string>
     <string name="check_update_when_wifi_available">Utilizaţi doar Wi-Fi pentru verificarea actualizărilor</string>
     <string name="check_update_when_wifi_available_sum">"Se verifică pentru actualizări doar atunci când este conexiune la internet prin Wi-Fi"</string>
     <string name="clean_up_button">Curăţare</string>
@@ -80,7 +80,7 @@
     <string name="edit_comment">"  Adăugaţi un comentariu"</string>
     <string name="edit_comment_title">Editaţi comentariul</string>
     <string name="edit_text_default">Scrieți un comentariu</string>
-    <string name="emegency_build">Build:</string>
+    <string name="emegency_build">"Build "</string>
     <string name="expect">Așteptări</string>
     <string name="experimental_build">Experimental</string>
     <string name="finish">Finalizaţi</string>
@@ -219,7 +219,7 @@ http://zhushou.xiaomi.com"</string>
     <string name="submit_success">Trimis</string>
     <string name="test">Test</string>
     <string name="timer_title">Dispozitivul va reporni în %d secunde.</string>
-    <string name="title_toast_auto">Dispozitivul va reporni în</string>
+    <string name="title_toast_auto">Actualizările vor fi descărcate în mod automat</string>
     <string name="toast_delay_update_tonight">Telefonul va aplica actualizările între 2:00 AM și 5:00 AM</string>
     <string name="top_secret_build">Top-secret</string>
     <string name="uncrypt_title">Decriptare (%s)</string>
