--- a/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="account_info">Contul meu</string>
     <string name="account_name_not_login">Conectaţi-vă</string>
@@ -369,7 +369,7 @@
     <string name="theme_current_using_has_update">Este disponibilă o actualizare</string>
     <string name="theme_description_title_customized">Personalizat</string>
     <string name="theme_description_title_default">Prestabilit</string>
-    <string name="theme_empty_redirect">Înapoi la Magazin Teme</string>
+    <string name="theme_empty_redirect">Înapoi la Magazinul de Teme</string>
     <string name="theme_favorite_add_fail">Nu se poate adăuga tema la favorite</string>
     <string name="theme_favorite_add_success">Temă adăugată la favorite</string>
     <string name="theme_favorite_delete">Eliminaţi din favorite</string>
