--- a/Romanian/main/VpnDialogs.apk/res/values-ro/strings.xml
+++ b/Romanian/main/VpnDialogs.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="configure">Configuraţi</string>
     <string name="data_received">Primite:</string>
@@ -6,7 +6,7 @@
     <string name="data_value_format">%1$s octeți / %2$s pachete</string>
     <string name="disconnect">Deconectaţi</string>
     <string name="duration">Durată:</string>
-    <string name="legacy_title">VPN este conectat</string>
+    <string name="legacy_title">VPN conectat</string>
     <string name="prompt">Solicitare de conexiune.</string>
     <string name="session">Sesiune:</string>
     <string name="warning">%s dorește să creeze o conexiune VPN care îi va permite monitorizarea traficului. NU acceptaţi decât dacă aveţi încredere în această aplicaţie. &lt;br /&gt; &lt;br /&gt; &lt;img src=vpn_icon /&gt; apare în partea de sus a ecranului atunci când VPN este activ.</string>
