--- a/Romanian/main/WallpaperCropper.apk/res/values-ro/strings.xml
+++ b/Romanian/main/WallpaperCropper.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="crop_wallpaper">Decupare imagine de fundal</string>
     <string name="wallpaper_instructions">Setare imagine de fundal</string>
