--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="act_find_city_hint">Introduceţi locaţia</string>
     <string name="act_find_city_hot_attractions_title">Locații populare</string>
@@ -21,7 +21,7 @@
     <string name="activity_main_time_format">E</string>
     <string name="activity_main_update_time">Actualizat %1$s</string>
     <string name="activity_main_update_time_expire">Date expirate</string>
-    <string name="activity_main_update_time_right_now">acum</string>
+    <string name="activity_main_update_time_right_now">chiar acum</string>
     <string name="activity_weathermain_locationg">Localizare…</string>
     <string name="activity_weathermain_locationg_error">"Nu se poate localiza"</string>
     <string name="add_city">Adăugaţi</string>
@@ -45,7 +45,7 @@
     <string name="aqi_detail_sub_title">Detalii ICA</string>
     <string name="aqi_detail_subtitle">ICA %1$s</string>
     <string name="aqi_detail_title">Indicele de Calitate a Aerului</string>
-    <string name="aqi_detail_unit">Unitatea de măsură: µg/m3 (CO:mg/m3)</string>
+    <string name="aqi_detail_unit">Unitatea de măsură: µg/m³ (CO: mg/m³)</string>
   <string name="aqi_display_exp">exp_%1$s</string>
     <string name="aqi_publish_source">Actualizat la %1$s de CNEMC</string>
     <string name="aqi_publish_time">Actualizat la %1$s</string>
@@ -124,7 +124,7 @@ Glisați în jos pentru a actualiza sau verificați setările de rețea"</string
     <string name="indices_title_pressure">Presiune</string>
     <string name="indices_title_restriction">Restricții auto</string>
     <string name="indices_title_sport">Sport</string>
-    <string name="indices_title_uv">Index UV</string>
+    <string name="indices_title_uv">Indice UV</string>
     <string name="indices_title_visibility">Vizibilitate</string>
     <string name="information_manager_default_weather_bg">Fundal implicit Meteo</string>
     <string name="information_manager_extension">Extensie meteo</string>
@@ -179,7 +179,7 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="precipitation_degree_three">moderată</string>
     <string name="precipitation_degree_two">ușoară</string>
     <string name="pressure_connect">%1$s mb</string>
-  <string name="radar_cloud_image_title">Radar Map</string>
+    <string name="radar_cloud_image_title">Hartă radar</string>
     <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
     <string name="realtime_humidity_title">Umiditatea relativă</string>
     <string name="realtime_temperature_no_data">N/A</string>
