--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -1,9 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="abc_action_bar_home_description">Acasă</string>
     <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
     <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
@@ -155,11 +151,8 @@
     <string name="comment_good">Bun</string>
     <string name="commit_done">Acțiune completată</string>
     <string name="commit_thanks">Vă mulțumim pentru feedback.</string>
-<<<<<<< HEAD
     <string name="common_use">comun</string>
-=======
-    <string name="common_use">Utilizate fracvent</string>
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
+    <string name="common_use">Utilizate frecvent</string>
     <string name="confirm">OK</string>
     <string name="confirm_on">﻿OK</string>
     <string name="connect_to_retry">"Nu se poate conecta la rețea. Verificați conexiunea si reîncercați."</string>
@@ -233,9 +226,6 @@
     <string name="epg_channel_operation_tip">Apăsați canalul pentru a-l edita sau pentru a-l adăuga la Favorite</string>
     <string name="epg_channel_search_hint">Adăugați numărul canalului/Căutați numele canalului</string>
     <string name="epg_comment_action_bar_title">Comentariu: %1$s</string>
-<<<<<<< HEAD
-=======
-=======
   <string name="abc_action_bar_home_description">Acasă</string>
   <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
   <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
@@ -478,16 +468,12 @@
     <string name="epg_have_no_fav_channel">Nu aveți canale favorite</string>
   <string name="epg_home_sliding_down">Restrângeți</string>
   <string name="epg_home_sliding_up">Extindeți</string>
-<<<<<<< HEAD
     <string name="epg_hot_channels">Canale populare</string>
     <string name="epg_hot_comment_list_title">Cele mai bune comentarii</string>
     <string name="epg_hot_programs">Programe populare</string>
-=======
-<<<<<<< HEAD
     <string name="epg_hot_channels">Canale</string>
     <string name="epg_hot_comment_list_title">Cele mai bune comentarii</string>
     <string name="epg_hot_programs">Programe</string>
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="epg_latest_comment_list_title">Comentarii recente（%1$d）</string>
     <string name="epg_load_comment">Se preiau cele mai recente comentarii</string>
     <string name="epg_load_more_latest_comment">Se obțin mai multe recenzii</string>
@@ -503,8 +489,6 @@
     <string name="epg_program_comment">Scrieți o opinie</string>
     <string name="epg_program_detail_more_time_events">Mai multe evenimente de timp?</string>
     <string name="epg_program_share">Partajați %1$s</string>
-<<<<<<< HEAD
-=======
   <string name="epg_program_share_drama">Hai cu mine să vezi %3$s Canal: %1$s, La:%2$s. Evaluați și ghiciți deznodământul cu ajutorul Telecomenzii Mi</string>
     <string name="epg_program_share_game">Urmărește cu mine: %3$s Canal: %1$s, La:%2$s.</string>
     <string name="epg_program_updated_to">Program setat la: %1$d</string>
@@ -745,7 +729,6 @@
     <string name="get_data_fail_tips">"Obținerea datelor a eșuat; reîncercați"</string>
     <string name="get_info_failed">"Nu s-au putut obține informații"</string>
   <string name="get_location_fail_tip">Nu s-a putut obține locația în mod automat, încercați manual</string>
-<<<<<<< HEAD
     <string name="guid_one">· Conectați decodorul la aceeași rețea Wi-Fi la care este conectat telefonul</string>
     <string name="guid_three">"· Unele comenzi pot lipsi dacă decodorul nu rulează Android"</string>
     <string name="guid_two">· Dispozitivele vor fi detectate și afișate pe această pagină</string>
@@ -1013,10 +996,6 @@ Asigurați-vă că %1$s reacționează."</string>
     <string name="match_tip_tvav">S-a modificat sursa de intrare?</string>
     <string name="match_top_tips">"Aparatul are nevoie de un anume timp de reacție，
 vă rog așteptați"</string>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="match_total_frame">%1$d total</string>
     <string name="match_tv_intro_ch_inc">Eliberați când se schimbă canalul</string>
     <string name="match_tv_intro_source">Eliberați când se modifică sursa de intrare</string>
@@ -1065,19 +1044,13 @@ vă rog așteptați"</string>
     <string name="my_notification">Notificări</string>
     <string name="my_room">Camera mea</string>
     <string name="my_room_underline"><u>Camera mea</u></string>
-<<<<<<< HEAD
     <string name="my_setting">Setările mele</string>
-=======
     <string name="my_setting">Setări</string>
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="nearby">În apropiere</string>
     <string name="network_diagnosis">Testare rețea</string>
     <string name="network_no_connection">"Nu se poate conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="network_ok">Nu au fost detectate erori</string>
     <string name="network_unstable">· Conexiunea este stabilă</string>
-<<<<<<< HEAD
-=======
-=======
   <string name="match_total_frame">%1$d total</string>
   <string name="match_tv_intro_ch_inc">Eliberați când se schimbă canalul</string>
   <string name="match_tv_intro_source">Eliberați când se modifică sursa de intrare</string>
@@ -1400,10 +1373,6 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="room_guide_tips">"Controlați multiple dispozitive
  
 direct din Blocarea ecranului"</string>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="save">Salvați</string>
     <string name="save_share_tips">Vă place aplicația? Puteți face o evaluare.</string>
     <string name="save_share_title">Salvați această telecomandă?</string>
@@ -1603,18 +1572,12 @@ direct din Blocarea ecranului"</string>
     <string name="upgrade_found_new_version">Actualizare disponibilă (%1s)</string>
     <string name="upgrade_later">Mai târziu</string>
     <string name="upgrade_loading">Descărcare…</string>
-<<<<<<< HEAD
     <string name="upgrade_log">"Detalii despre actualizare"</string>
-=======
     <string name="upgrade_log">"Ce este nou"</string>
->>>>>>> 36ccafc6410d8439b042200315f632951d31fd1a
     <string name="upgrade_now">Actualizează</string>
     <string name="upgrade_title_frame">%1s</string>
     <string name="upgrading">Actualizare…</string>
     <string name="use_tv_power_key">"Utilizați butonul ponit/oprit al %1$s
-<<<<<<< HEAD
-=======
-=======
   <string name="save">Salvați</string>
   <string name="save_share_tips">Vă place aplicația? Puteți face o evaluare.</string>
   <string name="save_share_title">Salvați această telecomandă?</string>
