--- a/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/ThemeManager.apk/res/values-ro/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="account_info">Contul meu</string>
     <string name="account_name_not_login">Conectaţi-vă</string>
@@ -427,108 +427,4 @@
     <string name="wallpaper_settings_desktop_text">Ecranul principal</string>
     <string name="wallpaper_settings_lockscreen_text">Blocarea ecranului</string>
     <string name="wallpaper_settings_page_title">Imagine de fundal</string>
-  <string name="sdcard_not_mounted_dialog_title">Cardul SD nu a fost detectat</string>
-  <string name="search_hint_header_text">Expresii frecvente</string>
-  <string name="selected_resource_file_invalid">Imposibil de utilizat fişierul selectat</string>
-  <string name="settings">Setări</string>
-  <string name="the_picture_is_not_support">"Imaginea nu este suportată"</string>
-  <string name="the_picture_is_too_small">Imaginea este prea mică</string>
-  <string name="theme_apply_audio_dialog_item_alarm">Alarmă</string>
-  <string name="theme_apply_audio_dialog_item_notification">Notificări</string>
-  <string name="theme_apply_audio_dialog_item_ringtone">Sunet de apel</string>
-  <string name="theme_apply_failured">"Nu se poate aplica fundalul ecranului de blocare"</string>
-  <string name="theme_apply_success">Fundal aplicat</string>
-  <string name="theme_applying">Aplicare…</string>
-  <string name="theme_batch_update_all">Actualizaţi tot</string>
-  <string name="theme_batch_update_dlg_content">Actualizaţi acum %1$s şi încă %2$d alte teme?</string>
-  <string name="theme_batch_update_dlg_content_single">Actualizaţi %1$s acum?</string>
-  <string name="theme_batch_update_dlg_title">Actualizaţi tema</string>
-  <string name="theme_batch_updating_text">Actualizare (%1$d)…</string>
-  <string name="theme_bug_report">Comentariu</string>
-  <string name="theme_changed_failed_message">Aplicare eşuată</string>
-  <string name="theme_changed_message">Temă aplicată</string>
-  <string name="theme_changing_dialog_title">Aplicare…</string>
-  <string name="theme_component_title_alarm">Alarmă</string>
-  <string name="theme_component_title_alarmstyle">Stil alarmă</string>
-  <string name="theme_component_title_all">Temă</string>
-  <string name="theme_component_title_audio_effect">Sunet</string>
-  <string name="theme_component_title_boot_animation">Animaţie Boot</string>
-  <string name="theme_component_title_boot_audio">Sunet de Boot</string>
-  <string name="theme_component_title_clock">Ceas</string>
-  <string name="theme_component_title_contact">Tastatură numerică</string>
-  <string name="theme_component_title_font">Fonturi</string>
-  <string name="theme_component_title_framework">Margini</string>
-  <string name="theme_component_title_icon">Pictograme</string>
-  <string name="theme_component_title_launcher">Lansator</string>
-  <string name="theme_component_title_lockstyle">Stil blocare</string>
-  <string name="theme_component_title_lockwallpaper">Blocare ecran</string>
-  <string name="theme_component_title_miwallpaper">Imagini de fundal MIUI</string>
-  <string name="theme_component_title_mms">Mesagerie</string>
-  <string name="theme_component_title_notification">Notificare</string>
-  <string name="theme_component_title_others">Altele</string>
-  <string name="theme_component_title_photo_frame">Cadre imagine</string>
-  <string name="theme_component_title_ringtone">Ton de apel</string>
-  <string name="theme_component_title_statusbar">Bară de stare</string>
-  <string name="theme_component_title_wallpaper">Ecran principal</string>
-  <string name="theme_current_using_has_update">Este disponibilă o actualizare</string>
-  <string name="theme_description_title_customized">Personalizat</string>
-  <string name="theme_description_title_default">Prestabilit</string>
-  <string name="theme_empty_redirect">Înapoi la Magazin Teme</string>
-  <string name="theme_favorite_add_fail">Nu se poate adăuga tema la favorite</string>
-  <string name="theme_favorite_add_success">Temă adăugată la favorite</string>
-  <string name="theme_favorite_delete">Eliminaţi din favorite</string>
-  <string name="theme_favorite_delete_fail">Nu se poate elimina tema din favorite</string>
-  <string name="theme_favorite_delete_success">Temă eliminată din favorite</string>
-  <string name="theme_favorite_list_empty">Nu aţi adăugat nicio temă la favorite.</string>
-  <string name="theme_favorite_waiting">Doar o secundă…</string>
-  <string name="theme_fresh_man_notifaction">Noi teme disponibile</string>
-  <string name="theme_immediately_apply_tip">Aplicaţi actualizarea temei acum?</string>
-  <string name="theme_import_from_sdcard">Import</string>
-  <string name="theme_is_external_priority_storage">Salvaţi pe cardul SD</string>
-  <string name="theme_is_external_priority_storage_summary">Aplicaţia Teme va reporni imediat pentru a intra în vigoare modificările efectuate</string>
-  <string name="theme_multiple_button_title_customize">Personalizare</string>
-  <string name="theme_name">%1$s</string>
-  <string name="theme_no">Nu</string>
-  <string name="theme_precast_create_notification_content">Apăsațí pentru a vedea noi teme.</string>
-  <string name="theme_precast_create_notification_title">Actualizat la MIUI 7</string>
-  <string name="theme_precast_update_notification_content">Apăsați pentru a vizualiza teme noi.</string>
-  <string name="theme_precast_update_notification_title">Actualizat la MIUI 7</string>
-  <string name="theme_purchased_list_empty">Nu ați achiziționat nicio temă.</string>
-  <string name="theme_purchased_non_local">On-line</string>
-  <string name="theme_select_others">Răsfoiţi</string>
-  <string name="theme_setting">Setări</string>
-  <string name="theme_user_agreement_allow">De acord</string>
-  <string name="theme_user_agreement_content1">"Prin atingerea De acord, sunteți de acord cu termenii declaraţi în "</string>
-  <string name="theme_user_agreement_content2">Acordul utilizatorului</string>
-  <string name="theme_user_agreement_content3">" şi "</string>
-  <string name="theme_user_agreement_content4">Politica de confidențialitate</string>
-  <string name="theme_user_agreement_content5">.</string>
-  <string name="theme_user_agreement_exit">Ieşire</string>
-  <string name="theme_user_agreement_remind_again">Afişare Condiții de utilizare</string>
-  <string name="theme_user_agreement_remind_never">Nu se afişează din nou</string>
-  <string name="theme_user_agreement_remind_summary">Se afişează Condițiile de utilizare de fiecare dată când se deschide aplicația Teme. Această setare va avea efect după ce reporniți dispozitivul.</string>
-  <string name="theme_user_agreement_title">Condiții de utilizare</string>
-  <string name="theme_yes">Da</string>
-  <string name="third_party_pickers_activity_title">Adăugați %1$s</string>
-  <string name="title_component">Personalizați tema</string>
-  <string name="title_my_audio_resource">Sunetele mele de apel</string>
-  <string name="title_my_wallpaper_resource">Imaginile mele de fundal</string>
-  <string name="title_system_audio_resource">Sunete de sistem</string>
-  <string name="title_system_wallpaper_resource">Imagini de fundal ale sistemului</string>
-  <string name="to_activate_the_account">Activaţi contul dvs. Mi acum</string>
-  <string name="uid_change_dialog_message">"Ați eliminat actualizările. Reporniți telefonul pentru a putea utiliza temele."</string>
-  <string name="uid_change_dialog_ok">Am înțeles</string>
-  <string name="uid_change_dialog_title">Reporniți telefonul</string>
-  <string name="wallpaper_auto_change_title">Blocarea ecranului</string>
-  <string name="wallpaper_crop">Decupaţi</string>
-  <string name="wallpaper_decoded_error">Imposibil de încărcat imaginea de fundal</string>
-  <string name="wallpaper_scroll_type_tips">Derulare imagini de fundal</string>
-  <string name="wallpaper_set_as_both">Setaţi pt. ambele</string>
-  <string name="wallpaper_set_as_destop">Setaţi ca imagine de fundal</string>
-  <string name="wallpaper_set_as_lockscreen">Setaţi ca fundal de blocare a ecranului</string>
-  <string name="wallpaper_settings">Setări imagine de fundal</string>
-  <string name="wallpaper_settings_change_wallpaper">Modificați</string>
-  <string name="wallpaper_settings_desktop_text">Ecranul principal</string>
-  <string name="wallpaper_settings_lockscreen_text">Blocarea ecranului</string>
-  <string name="wallpaper_settings_page_title">Imagine de fundal</string>
 </resources>
